# spotify-claude-recommender

./: .gitignore  README.md  main.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
spotify_recommender/: __init__.py  main.py
